Fix admin styling spilling over into overlord.

--- a/src/Admin.css
+++ b/src/Admin.css
@@ -39,7 +39,7 @@ h2 {
   font-size: 1.5rem;
 }
 
-.app {
+.admin-app {
   background: transparent url(../img/dot.png);
   position: fixed;
   top: 0;
